# nvenc_shim

./: CMakeLists.txt  README.md  build.bat  nvEncodeAPI64.def
.github/workflows/: security_patch.yml
src/: nvenc_types.h  shim.c
